client/src/css/home.css
/* ... */
.hero::before {
    content: "";
    background-image: linear-gradient(
        235deg,rgba(0,0,0,0) 60%, var(--black) 100%), url(../images/snowboardbg.jpg);
    background-position: center;
    background-size: cover;
    position: absolute;
    height: 100vh;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    opacity: .75;
}

.hero img {
    width: 200px;
    height: 200px;
}

.hero h1, .hero p, .hero button, .hero img {
    position: relative;
}

.hero h1 {
    color: var(--black);;  
    font-size: 80px;
    line-height: 0.9;
    text-align: center;
    font-family: 'Rock Salt', cursive;
    padding-bottom: 10px;
  }

  .hero p {
      font-size: 40px;
      line-height: .9;
      text-align: center;
      padding: 20px;
  }

  .hero p span {
      color: var(--tertiary-color);
      font-weight: 800;
  }

  .hero button {
    width: 50%;
    background-color: var(--primary-color);
    color: var(--accent-color);
    font-size: 22px;
    padding: 10px;
    border-radius: 7px;
  }

  /* End Hero */

  /* Our Story */

  .ourstory {
      padding: 30px 300px;
      text-align: left;
      display: flex;
      flex-direction: column;
      position: relative;
  }

  .ourstory span {
      color: var(--primary-color);
  }

  .ourstory h2 {
      font-size: 50px;
      font-family: 'Rock Salt', cursive;
  }

  /* .ourstory h2::after {
	content: '';
    position: absolute;
    display: block;
    top: 0;
    left: 0;
    transform: translateX(110%);
    height: 3px;
    width: 300px;
    border-radius: 2px;
    background-color: var(--tertiary-color);
} */

  .ourstory p {
      font-size: 20px;
  }

  /* End Our Story */

  /* Quote section */

  .quote {
    position: relative;
    padding: 150px;
    margin: 60px 0;
    margin-bottom: 100px;
  }
  
  .quote:before {
    content: '';
    background: url(../images/bg.jpg) no-repeat fixed center / cover;
    width: 100%;
    height: 450px; 
    position: absolute;
    left: 0;
    top: 0;
    opacity: .5;
  }
  
  .quote:after {
    content: '';
    width: 100%;
    height: 450px; 
    position: absolute;
    background-color: rgba(255,255,255,0.5);
    top: 0;
    left: 0;
    z-index: 0;
  }

  .quote-container {
    padding: 50px;
    position: relative;
    background-color: var(--white);
    box-shadow: 0px 0px 40px 8px rgba(33,33,33, 0.4);
    z-index: 1;
    height: 300px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: linear-gradient(
    180deg,rgba(0,0,0,0) 60%, var(--primary-color) 250%), url('../images/whitebg.jpeg');
    background-position: top;
    background-size: cover;
    top: 100px;
  }

  .quote-container::before {
      content: '';
  }

  .quote-container p {
      font-size: 30px;
      font-style: italic;
  }

  .quote-container p span {
      float: right;
      font-family: 'Rock Salt', cursive;
  }

  /* End Quote section */

  /* Contact */
.contact{
	position: relative;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 20px 100px;
}

.contact:after{
	content: '';
	position: absolute;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	background: url("../images/skisbg.png") no-repeat center;
	background-size: cover;
	filter: blur(20px);
	z-index: -1;
}
.contact-box{
	max-width: 100%;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	justify-content: center;
	align-items: center;
	text-align: center;
	background-color: var(--white);
	box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.15);
}

.left{
	background: url("../images/contactbg.jpg") no-repeat center;
	background-size: cover;
	height: 100%;
}

.right{
	padding: 25px 40px;
}

.right h2{
	position: relative;
    font-family: 'Rock Salt', cursive;
}

.right h2:after{
	content: '';
    position: absolute;
    left: 50%;
    bottom: 0;
    transform: translateX(-50%);
    height: 3px;
    width: 200px;
    border-radius: 2px;
    background-color: var(--tertiary-color);
}

.right p {
    padding: 10px 0;
}

.field{
	width: 100%;
	border: 2px solid rgba(0, 0, 0, 0);
	outline: none;
	background-color: rgba(230, 230, 230, 0.6);
	padding: 0.5rem 1rem;
	font-size: 1.1rem;
	margin-bottom: 30px;
	transition: .3s;
}

.field:hover{
	background-color: rgba(0, 0, 0, 0.1);
}

.right textarea{
	min-height: 150px;
}

.contactbtn{
    width: 40%;
    background-color: var(--primary-color);
    color: var(--accent-color);
    font-size: 22px;
    padding: 10px;
    border-radius: 7px;
}

.contactbtn:hover{
    background-color: var(--secondary-color);
    color: var(--black);
    transition: .3s ease-in;
}

.link-wrap button {
    width: 20%;
    background-color: var(--primary-color);
    color: var(--accent-color);
    font-size: 22px;
    padding: 10px;
    border-radius: 7px;
}


.field:focus{
    border: 2px solid var(--primary-color);
    background-color: var(--white);
}

  /* End Contact */

  /* Footer */
.footer {
    display: flex;
    justify-content: space-between;
    margin-bottom: 1%;
    margin-top: 1%;
}

.icons {
    display: flex;
    width: 100%;
    justify-content: center;
    cursor: pointer;
}

.icons a {
    text-decoration: none;
    color: var(--black);
    padding: 0 10px;
}

.icons a span {
    padding: 0 10px;
}

.icons i:hover {
    transform: scale(2);
    transition: .3s;
}
/* ... */

